# dro_ddu

./: .gitignore  CMakeLists.txt
data/: smaller_0.json  smaller_1.json  smaller_2.json  smaller_3.json
include/: consts.hpp  model.hpp  model_data.hpp
src/: consts.cpp  main.cpp  model.cpp  model_data.cpp
